--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 	<div class="right">
 	   <div class="wrapper">
 		 
-		<img class="gif" src="img/gif1.gif">
+		<img class="gif" src="img/gif1.gif" width="10%">
 		
-		<p id="rightpageinfo"><b>Finding Ways is a publication that highlights projects relating to navigation in any form. The platform seeks to explore ways of reading in a web based context, and thereby transforming the chosen projects to fit the platform.</b></p>
+		<p id="rightpageinfo"><b>Emanating from movement, Finding Ways approaches projects with topics and methods that are interlaced with navigation. Making the projects available through an additional and editorial reading the publication values to extend the way we read and perceive.
+ </b></p>
 	
 	
 	  </div>
