--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		 
 		<img class="gif" src="img/gif1.gif" width="10%">
 		
-		<p id="rightpageinfo"><b>Emanating from movement, Finding Ways approaches projects with topics and methods that are interlaced with navigation. Making the projects available through an additional and editorial reading the publication values to extend the way we read and perceive.
+		<p id="rightpageinfo"><b>Emanating from movement, Finding Ways publish projects with topics and methods that are interlaced with navigation. Making the projects available through an additional and editorial reading the publication values to extend the way we read and perceive.
  </b></p>
 	
 	
